--- a/moveit_calibration_gui/package.xml
+++ b/moveit_calibration_gui/package.xml
@@ -1,46 +1,44 @@
-<package format="2">
+<?xml version='1.0' encoding='utf-8'?>
+<package format="3">
   <name>moveit_calibration_gui</name>
-  <version>0.1.0</version>
-  <description>MoveIt calibration gui</description>
-
+  <version>2.0.0</version>
+  <description>MoveIt calibration GUI plugins</description>
   <author email="yu.yan@intel.com">Yu Yan</author>
-
   <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
-
   <license>BSD</license>
 
-  <url type="website">http://moveit.ros.org</url>
+  <url type="website">https://moveit.ros.org</url>
   <url type="bugtracker">https://github.com/ros-planning/moveit_calibration/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit_calibration</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>pkg-config</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <build_depend>class_loader</build_depend>
-  <build_depend>eigen</build_depend>
+  <build_depend>eigen3_cmake_module</build_depend>
+  <build_depend>moveit_common</build_depend>
   <build_depend>qtbase5-dev</build_depend>
-  <build_depend>image_geometry</build_depend>
 
   <depend>cv_bridge</depend>
-  <depend>geometric_shapes</depend>
-  <depend>moveit_ros_visualization</depend>
+  <depend>eigen</depend>
+  <depend>image_geometry</depend>
+  <depend>image_transport</depend>
+  <depend>libopencv-dev</depend>
   <depend>moveit_calibration_plugins</depend>
-  <depend>moveit_core</depend>
-  <depend>moveit_ros_perception</depend>
-  <depend>moveit_ros_planning</depend>
+  <depend>moveit_ros_visualization</depend>
   <depend>moveit_ros_planning_interface</depend>
   <depend>moveit_visual_tools</depend>
-  <depend version_gte="1.11.2">pluginlib</depend>
-  <depend>rosconsole</depend>
-  <depend>roscpp</depend>
-  <depend>rviz</depend>
+  <depend>pluginlib</depend>
+  <depend>rclcpp</depend>
+  <depend>rviz_common</depend>
   <depend>rviz_visual_tools</depend>
   <depend>tf2_eigen</depend>
 
-  <test_depend>rostest</test_depend>
+  <exec_depend>libqt5-core</exec_depend>
+  <exec_depend>libqt5-gui</exec_depend>
+  <exec_depend>libqt5-widgets</exec_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
     <rviz plugin="${prefix}/handeye_calibration_rviz_plugin_description.xml"/>
   </export>
-
 </package>
